PD-26 Добавить кнопку создать группу

--- a/app/src/main/res/layout/activity_webrtc.xml
+++ b/app/src/main/res/layout/activity_webrtc.xml
@@ -27,6 +27,13 @@
             android:layout_height="wrap_content"
             android:text="Запросить подключение" />
 
+        <Button
+            android:id="@+id/btnCreateGroupChat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Создать группу" />
+
+
         <!-- Новая кнопка для подключения к групповому чату -->
         <Button
             android:id="@+id/btnConnectGroupChat"
